Backend repository + service + model
model attribute names edited for consistency.
The user variable inside the create(topicController) was looking empty. To fix the issue we edit toString -> asString inisde JWTUtil